--- a/FaceEmotion CNN model.ipynb
+++ b/FaceEmotion CNN model.ipynb
@@ -229,7 +229,17 @@
     "                                callbacks=callbacks_list\n",
     "                                )"
    ]
-  }
+  },
+   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fb6e740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "model.save("modelProf.h5")"
+    }
  ],
  "metadata": {
   "kernelspec": {
